// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchFilter should match snapshot 1`] = `
<index.tsx
  filterBy="title"
  handleFilter={[MockFunction]}
  handleFilterBy={[MockFunction]}
/>
`;

exports[`SearchFilter should match snapshot 2 1`] = `
<index.tsx
  filterBy="genres"
  handleFilter={[MockFunction]}
  handleFilterBy={[MockFunction]}
/>
`;
